package nl.saxion.client.userinterface.output;

public interface OutputInterface {
    void display(String message);
    void showCommands();
}
